--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
                         <div class="card-header">
                             <h3>Results</h3>
                         </div>
-                        <div class="card-body" id="gameResults"> <!-- Corrected id to "gameResults" -->
+                        <div class="card-body" id="gameResults">
                             <p class="card-text">Player chose: <span id="playerChoiceResult"></span></p>
                             <p class="card-text">Computer chose: <span id="computerChoiceResult"></span></p>
                             <p class="card-text" id="roundResult"></p>
